k8s/07-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cavalocal-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
    - host: conjunta3p.espe.edu.ec
      http:
        paths:
          - path: /api/audit
            pathType: Prefix
            backend:
              service: { name: audit-service, port: { number: 3002 } }
          - path: /dashboard
            pathType: Prefix
            backend:
              service: { name: dashboard-service, port: { number: 8080 } }
          - path: /api
            pathType: Prefix
            backend:
              service: { name: backend-service, port: { number: 3001 } }
          - path: /
            pathType: Prefix
            backend:
              service: { name: web-service, port: { number: 8080 } }
